@@ -1,6 +1,6 @@
 {
   "name": "simp-pupmod",
-  "version": "8.5.0",
+  "version": "8.6.0",
   "author": "SIMP Team",
   "summary": "A puppet module to manage puppetserver and puppet agents",
   "license": "Apache-2.0",
@@ -47,7 +47,7 @@
     },
     {
       "name": "simp/iptables",
-      "version_requirement": ">= 6.1.2 < 7.0.0"
+      "version_requirement": ">= 6.5.3 < 7.0.0"
     },
     {
       "name": "simp/simplib",
@@ -55,7 +55,7 @@
     },
     {
       "name": "simp/pki",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "version_requirement": ">= 6.2.0 < 7.0.0"
     }
   ],
   "requirements": [
