@@ -1,3 +1,11 @@
+* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 8.6.0
+- [puppetsync] Updates for Puppet 8
+  - These updates may include the following:
+    - Update Gemfile
+    - Add support for Puppet 8
+    - Drop support for Puppet 6
+    - Update module dependencies
+
 * Wed Sep 06 2023 Steven Pritchard <steve@sicura.us> - 8.5.0
 - Add AlmaLinux 8 support
 - Add support and fixes for Puppet 8 and stdlib 9
